Add main.cpp to execute lv_example_get_started.h, add lv_conf.h

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,11 @@
 [submodule "lib/lvgl"]
 	path = lib/lvgl
 	url = git@github.com:lvgl/lvgl.git
+
+[submodule "include/lvgl_esp32_drivers"]
+	path = include/TFT_eSPI
+	url = git@github.com:lvgl/lvgl_esp32_drivers.git  
+
+[submodule "include/git@github.com:Bodmer/TFT_eSPI.git"]
+	path = include/TFT_eSPI
+    url = git@github.com:Bodmer/TFT_eSPI.git
